[package]
name = "aeb_rs"
version = "0.1.0"
authors = ['Andrew Ealovega <Andrew@Ealovega.dev>']
edition = "2021"

[dependencies]
micromath = "2.0.0"
line_drawing = { git = "https://github.com/andyblarblar/line_drawing.git" }

[dev-dependencies]
ld06-embed = { git = "https://github.com/andyblarblar/LD06-embed" }
linux-embedded-hal = "0.3.2"
nalgebra = "0.31.2"